# eink75

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
includes/: global.h  led.h
src/: led.c  main.c
